--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Nadar</h1>
-  <p>Nadar (Parijs, 6 april 1820 – aldaar, 21 maart 1910), pseudoniem van <strong>Gaspard-Félix Tournachon</strong>, was een Frans schrijver, tekenaar, fotograaf, journalist en ballonvaarder.</p>
-  <img src="./assets/img/nadar.jpg" alt="Zelfportret van Félix Nadar" />
-  <p>
-    Hij werd beroemd door zijn eerste luchtfoto's die hij maakte vanuit luchtballonnen. Op 26 september 1864 steeg hij, onder het oog van koning Leopold I, vanuit de Kruidtuin te Brussel op. Hier maakte hij gebruik van dranghekken, om de veiligheid van de omstanders te garanderen. Nog steeds spreekt men in België van een nadarafsluiting. De man zelf kon niet lachen met deze benaming en schreef daarover zelfs een brief naar de Belgische koning.
-  </p>
+  
+  <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.js"></script>
 </body>
 </html>
